Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION: truncation tweaks

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2345,7 +2345,7 @@ div.vslider-item[aria-hidden="true"]{
   background-color: #555;
 }
 
-.line-clamp {
+h3.line-clamp {
 	display:-webkit-box;
 	-webkit-line-clamp: 3;
 	-webkit-box-orient:vertical;
